resolve skillset text issue, add z-index to relevant elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -62,9 +62,19 @@ body {
     width: 100%;
     margin: 10px 0;
     padding: 10px;
-    text-align: center;
+    text-align: left;
     color: white;
     position: relative;
+    display: flex;
+    align-items: center;
+    z-index: 1;
+}
+
+.skills-container .skill img {
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+    z-index: 1;
 }
 
 .skills-container .skill::before {
@@ -75,7 +85,7 @@ body {
     height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, 0.1);
-    z-index: -1;
+    z-index: 0;
 }
 
 .skills-container .skill.html::before {
@@ -105,6 +115,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -1;
 }
 
 .skills-container .skill.css::after {
@@ -117,6 +128,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -1;
 }
 
 .skills-container .skill.js::after {
@@ -129,6 +141,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -1;
     color: black;
 }
 
@@ -142,6 +155,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -1;
 }
 
 .projects {
